src/objects/pca__Action__c.object
<CustomObject>
    <description>JavaScript functions that allow Postcode Anywhere to perform custom actions based on certain events</description>
    <fields>
        <fullName>pca__Code__c</fullName>
        <defaultValue>&quot;function(control, detail) {&quot; +  BR() + &quot;    // Add JavaScript code here&quot; +  BR() + &quot;}&quot;</defaultValue>
        <description>Javascript that the system should execute on the event</description>
        <label>Code</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pca__Event_Select__c</fullName>
        <description>Picklist for selecting event. This will be used in preference to the Event text field when populated.</description>
        <label>Event</label>
        <picklist>
            <picklistValues>
                <fullName>PageStartup</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ComponentStartup</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ComponentLoaded</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AddressSearch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AddressSelect</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>AddressCopy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AddressClear</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FieldChange</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CountryChange</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ComponentError</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>pca__Event__c</fullName>
        <label>Event</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pca__Setting__c</fullName>
        <label>Setting</label>
        <referenceTo>pca__Setting__c</referenceTo>
        <relationshipName>Actions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Action</label>
    <nameField>
        <label>Action Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Actions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>